# SRExam

./: README.md  package-lock.json  package.json  tsconfig.json
UML SR EXAM/: SR Exam.vpp  SR Exam.vpp.bak_000d  SR Exam.vpp.bak_000f  SR Exam.vpp.bak_001d  SR Exam.vpp.bak_001f  SR Exam.vpp.bak_043d  SR Exam.vpp.bak_044d  SR Exam.vpp.bak_045d  SR Exam.vpp.bak_046d  SR Exam.vpp.bak_047d  SR Exam.vpp.bak_048d  SR Exam.vpp.bak_049d  SR Exam.vpp.bak_050d  SR Exam.vpp.bak_051d  SR Exam.vpp.bak_052d  SR Exam.vpp.bak_053d  SR Exam.vpp.bak_054d  SR Exam.vpp.bak_055d  SR Exam.vpp.bak_056d  SR Exam.vpp.bak_057d  SR Exam.vpp.bak_058d  SR Exam.vpp.bak_059d  SR Exam.vpp.bak_060d  SR Exam.vpp.bak_061d  SR Exam.vpp.bak_062f  SR Exam.vpp.bak_063d  SR Exam.vpp.bak_064d  SR Exam.vpp.bak_065d  SR Exam.vpp.bak_066d  SR Exam.vpp.bak_067d  SR Exam.vpp.bak_068d  SR Exam.vpp.bak_069d  SR Exam.vpp.bak_070d  SR Exam.vpp.bak_071d  SR Exam.vpp.bak_072d  SR Exam.vpp.bak_158d  SR Exam.vpp.bak_159d  SR Exam.vpp.bak_160d  SR Exam.vpp.bak_161d  SR Exam.vpp.bak_162d  (+38 more)
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/schemas/: sr-exam.graphql
src-tauri/src/: main.rs
src/components/: NavBarComponent.tsx
src/components/ExamCoordinator/: NavBarComponents.tsx
src/components/SubjectDevelopment/: NavBarComponent.tsx
src/models/: Enrollment.d.ts  ExamTransactiond.ts  Room.d.ts  RoomTransaction.d.ts  Shift.ts  Subject.d.ts  User.d.ts
src/routes/: HomePage.tsx  LoginPage.tsx  ProfilePage.tsx
src/routes/OtherRole/: ExamTransactionDetail.tsx  (+1 more)
(+7 files in other folders)
